// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Side Navigation Component does not render when items are empty 1`] = `
<div>
  


</div>
`;

exports[`Side Navigation Component renders with all attributes provided 1`] = `
<div>
  

  
  <div
    class="ct-side-navigation ct-theme-dark ct-vertical-spacing-inset--both additional-class"
    data-test="true"
  >
    
    


  
    <div
      class="ct-skip-link ct-theme-dark "
    >
      
    
      <a
        _keys="data-platform"
        class="ct-link ct-theme-dark     ct-skip-link__link ct-visually-hidden"
        data-platform=""
        href="#main-content"
        title="Skip to main content"
      >
        <span
          class="ct-text-icon__text"
        >
          Skip to main content
        </span>
      </a>
        
    </div>
    
                  


  
    <h2
      class="ct-heading ct-theme-dark ct-side-navigation__title"
    >
      Main Navigation
    </h2>
    
              





            
    <ul
      class="ct-menu ct-menu--level-0 ct-theme-dark ct-side-navigation__menu"
      data-component-name="ct-menu"
    >
      
    
          
                  
      
            
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        
        <a
          class="ct-link ct-theme-dark     ct-menu__item__link"
          href="/"
          title="Home"
        >
          <span
            class="ct-text-icon__text"
          >
            Home
          </span>
        </a>
        
        
        
      
      </li>
      
          
                  
      
            
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        
        <a
          class="ct-link ct-theme-dark     ct-menu__item__link"
          href="/about"
          title="About"
        >
          <span
            class="ct-text-icon__text"
          >
            About
          </span>
        </a>
        
        
        
      
      </li>
      
          
                  
      
            
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        
        <a
          class="ct-link ct-theme-dark     ct-menu__item__link"
          href="/services"
          title="Services"
        >
          <span
            class="ct-text-icon__text"
          >
            Services
          </span>
        </a>
        
        
        
      
      </li>
      
          
                  
      
            
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        
        <a
          class="ct-link ct-theme-dark     ct-menu__item__link"
          href="/contact"
          title="Contact"
        >
          <span
            class="ct-text-icon__text"
          >
            Contact
          </span>
        </a>
        
        
        
      
      </li>
      
    
          
    </ul>
    
      
  
  </div>
  

</div>
`;

exports[`Side Navigation Component renders with only required attributes 1`] = `
<div>
  

  
  <div
    class="ct-side-navigation ct-theme-light  "
  >
    
    


  
    <div
      class="ct-skip-link ct-theme-light "
    >
      
    
      <a
        _keys="data-platform"
        class="ct-link ct-theme-light     ct-skip-link__link ct-visually-hidden"
        data-platform=""
        href="#main-content"
        title="Skip to main content"
      >
        <span
          class="ct-text-icon__text"
        >
          Skip to main content
        </span>
      </a>
        
    </div>
    
        





            
    <ul
      class="ct-menu ct-menu--level-0 ct-theme-light ct-side-navigation__menu"
      data-component-name="ct-menu"
    >
      
    
          
                  
      
            
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        
        <a
          class="ct-link ct-theme-light     ct-menu__item__link"
          href="/"
          title="Home"
        >
          <span
            class="ct-text-icon__text"
          >
            Home
          </span>
        </a>
        
        
        
      
      </li>
      
    
          
    </ul>
    
      
  
  </div>
  

</div>
`;

exports[`Side Navigation Component renders with some attributes missing 1`] = `
<div>
  

  
  <div
    class="ct-side-navigation ct-theme-light  "
  >
    
    


  
    <div
      class="ct-skip-link ct-theme-light "
    >
      
    
      <a
        _keys="data-platform"
        class="ct-link ct-theme-light     ct-skip-link__link ct-visually-hidden"
        data-platform=""
        href="#main-content"
        title="Skip to main content"
      >
        <span
          class="ct-text-icon__text"
        >
          Skip to main content
        </span>
      </a>
        
    </div>
    
        





            
    <ul
      class="ct-menu ct-menu--level-0 ct-theme-light ct-side-navigation__menu"
      data-component-name="ct-menu"
    >
      
    
          
                  
      
            
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        
        <a
          class="ct-link ct-theme-light     ct-menu__item__link"
          href="/"
          title="Home"
        >
          <span
            class="ct-text-icon__text"
          >
            Home
          </span>
        </a>
        
        
        
      
      </li>
      
          
                  
      
            
      
      <li
        class="ct-menu__item ct-menu__item--level-0   "
      >
        

        
        <a
          class="ct-link ct-theme-light     ct-menu__item__link"
          href="/about"
          title="About"
        >
          <span
            class="ct-text-icon__text"
          >
            About
          </span>
        </a>
        
        
        
      
      </li>
      
    
          
    </ul>
    
      
  
  </div>
  

</div>
`;
